--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,7 +1,7 @@
-# Production Configuration
+# Production Configuration for Render
 spring.profiles.active=production
 
-# Database Configuration for Production
+# Database Configuration for Production (Render compatible)
 spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb}
 spring.datasource.username=${DATABASE_USERNAME:sa}
 spring.datasource.password=${DATABASE_PASSWORD:}
@@ -21,8 +21,8 @@ spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# Server Configuration
-server.port=${PORT:8081}
+# Server Configuration (Render uses dynamic PORT)
+server.port=${PORT:10000}
 
 # Logging Configuration for Production
 logging.level.org.springframework.web=INFO
@@ -36,3 +36,7 @@ server.error.whitelabel.enabled=false
 # Application specific settings
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when_authorized
+
+# Render specific configurations
+server.tomcat.threads.max=200
+server.tomcat.max-connections=10000
