Fix Spring Boot configuration error - remove duplicate profile setting

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,19 +1,17 @@
 # Production Configuration for Render
+spring.application.name=diepxdemo
 
-# Database Configuration for Production (Render compatible)
-spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb}
-spring.datasource.username=${DATABASE_USERNAME:sa}
-spring.datasource.password=${DATABASE_PASSWORD:}
-spring.datasource.driver-class-name=${DATABASE_DRIVER:org.h2.Driver}
+# Database Configuration for Production - MySQL
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://137.59.105.34:3306/z2jcas1wtfi5_tonton?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.username=${DATABASE_USERNAME:z2jcas1wtfi5_ton}
+spring.datasource.password=${DATABASE_PASSWORD:=cQVf#~%R[xc}
+spring.datasource.driver-class-name=${DATABASE_DRIVER:com.mysql.cj.jdbc.Driver}
 
 # JPA/Hibernate Configuration for Production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
 spring.jpa.properties.hibernate.format_sql=false
-
-# H2 Console (disable in production)
-spring.h2.console.enabled=false
 
 # Thymeleaf Configuration for Production
 spring.thymeleaf.cache=true
