--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=diepxdemo
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://137.59.105.34:3306/z2jcas1wtfi5_tonton?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=z2jcas1wtfi5_ton
-spring.datasource.password==cQVf#~%R[xc
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dpg-d2nvhf3e5dus739gs09g-a.oregon-postgres.render.com:5432/tonton_dtfs?sslmode=require
+spring.datasource.username=tonton_dtfs_user
+spring.datasource.password=B4gObzp1u9jgdiRjVmhKOGRXXPb32CdJ
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Thymeleaf Configuration
@@ -18,5 +18,5 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 # Server Configuration
-server.port=8081
+server.port=8080
 logging.level.org.springframework.web=DEBUG
