--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,15 +2,15 @@
 spring.application.name=diepxdemo
 
 # Database Configuration for Production - MySQL
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://137.59.105.34:3306/z2jcas1wtfi5_tonton?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true}
-spring.datasource.username=${DATABASE_USERNAME:z2jcas1wtfi5_ton}
-spring.datasource.password=${DATABASE_PASSWORD:=cQVf#~%R[xc}
-spring.datasource.driver-class-name=${DATABASE_DRIVER:com.mysql.cj.jdbc.Driver}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://dpg-d2nvhf3e5dus739gs09g-a.oregon-postgres.render.com:5432/tonton_dtfs?sslmode=require}
+spring.datasource.username=${DATABASE_USERNAME:tonton_dtfs_user}
+spring.datasource.password=${DATABASE_PASSWORD:B4gObzp1u9jgdiRjVmhKOGRXXPb32CdJ}
+spring.datasource.driver-class-name=${DATABASE_DRIVER:org.postgresql.Driver}
 
 # JPA/Hibernate Configuration for Production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.properties.hibernate.format_sql=false
 
 # Thymeleaf Configuration for Production
