--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -18,6 +18,10 @@ spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
+
+
 # Server Configuration (Render uses dynamic PORT)
 server.port=${PORT:10000}
 
